--- a/scss/carousel-test.scss
+++ b/scss/carousel-test.scss
@@ -21,9 +21,7 @@ $font-family-secondary: 'Roboto Slab', serif;
     width: 100%;
     height: 100%;
     background-size: cover;
-    background-attachment: fixed;
     background-repeat: no-repeat;
-    background-position: center;
 
     .inner {
       position: relative;
